[workspace]
members = ["programs/*"]
resolver = "1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
hpl-macros = "0.0.2"
hpl-utils = "0.1.11"
hpl-events = { version = "0.1.24", features = ["no-entrypoint"] }
hpl-compression = { version = "=0.1.8-beta.14" }
hpl-hive-control = { version = "0.2.13", features = ["cpi"] }
hpl-character-manager = { version = "0.0.2-beta.9", features = ["cpi"] }
hpl-currency-manager = { version = "0.0.83", features = ["cpi"] }
mpl-bubblegum = { version = "1.1.0" }
rand = "0.8.5"
spl-account-compression = { version = "0.2.0", features = ["cpi"] }
