[package]
name = "hpl-nectar-missions"
version = "0.1.44"
description = "Honeycomb protocol library nectar utilities missions program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_nectar_missions"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
hpl-macros = { workspace = true }
hpl-utils = { workspace = true }
hpl-events = { workspace = true }
hpl-compression = { workspace = true }
hpl-hive-control = { workspace = true }
hpl-character-manager = { workspace = true }
hpl-currency-manager = { workspace = true }
rand = { workspace = true }
spl-account-compression = { workspace = true }
hpl-buzz-guild = { version = "0.0.1", features = ["cpi"] }
