[package]
name = "hpl-nectar-staking"
description = "Honeycomb protocol library nectar utilities staking program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.1.46"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_nectar_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
hpl-macros = "0.0.2"
hpl-utils = "0.1.11"
hpl-events = { version = "0.1.24", features = ["no-entrypoint"] }
hpl-hive-control = { version = "0.2.13", features = ["cpi"] }
hpl-currency-manager = { version = "0.0.83", features = ["cpi"] }
mpl-bubblegum = { version = "1.1.0" }
spl-account-compression = { version = "0.2.0", features = ["cpi"] }
