[package]
name = "hpl-nectar-staking"
description = "Honeycomb protocol library nectar utilities staking program"
author = ['Sultan Nadeem <sultanndilaram@gmail.com>']
version = "0.1.47"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hpl_nectar_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
hpl-toolkit = { workspace = true }
hpl-hive-control = { workspace = true }
hpl-character-manager = { workspace = true }
hpl-currency-manager = { workspace = true }
spl-account-compression = { workspace = true }
ahash = { workspace = true }
toml_edit = { workspace = true }
